# envoy-wasm-header-augmenting-filter

./: .editorconfig  .envrc  .gitignore  Cargo.toml  Makefile  README.org  kustomization.yaml  shell.nix
hack/: docker-compose.yaml  httpbin.dhall  istio.yaml  kube.yaml  kustomization.yaml
hack/destination_workload/: serve.py
hack/proxy/: Dockerfile  envoy.yaml
hack/sidecar/: Dockerfile  serve.py
hack/source_workload/: serve.py
nix/: rust.nix
src/: lib.rs
