[package]
name = "envoy-wasm-header-augmenting-filter"
version = "0.1.0"
authors = ["Martin Baillie <martin@baillie.email>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.11"
proxy-wasm = "0.1.2"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
serde-humanize-rs = "0.1.1"
wasm-bindgen = "0.2"

# Optimise for smallest sized binaries.
[profile.release]
lto = true
opt-level = 's'
